# ReversiGPT

./: .gitignore  build_cpp.sh  commands.txt  compare_models.py  config.py  db.sqlite3  debug_load_model.py  fix_and_convert.py  log.txt  model.yaml  package-lock.json  package.json  profile_results.prof  readme.md  requirements.txt  review.py  reviewHuman.py  train.py  web_review.py
AI/: config.py  config_loader.py  log_filter.py
AI/cpp/: CMakeLists.txt  mcts.cpp  mcts.h  (+3 more)
Database/: createModel.py  tfrecord.py  trainModel.py  transformer_Model.py  tune_hyperparams.py
cpp_reversi/: CMakeLists.txt  mcts.cpp  py_mcts.cpp  py_reversi.cpp  reversi_bitboard.cpp  reversi_bitboard.h
debug/: check_cpp_output.py  compress_weights_simplified.py  generate_cpp_weight_blocks.py  inspect_msgpack.py  inspect_training_data.py  visualize_attention.py
docs/: index.html  main.js  style.css
scripts/: build_cpp.sh
submission/: submission.py
tools/: analyze_MoE_gate.py  analyze_board_similarity.py  analyze_msgpack.py  build_mcts_python.py  check_cpp_output.py  check_experts.py  compare_models.py  compare_models_resnet.py  convert_to_tfjs.py  convert_to_tfjs_moe1.py  convert_to_tfjs_moe2.py  debug_moe2_input.py  diagnose_ai.py  evaluate_moe1.py  export_nano_25k.py  extract_weights.py  filter_elite_games.py  inspect_h5.py  inspect_msgpack.py  inspect_tfrecord.py  inspect_training_data.py  load_model_test.py  log_to_csv.py  moe1_tfjs_def.py  moe2_tfjs_def.py  parse_weight.py  repair_keras_file.py  repair_msgpack.py  reviewHuman.py  tournament.py  visualize_attention.py
(+34 files in other folders)
